OIS-25: rtl compatibility fixes

--- a/src/common/_dropdown.scss
+++ b/src/common/_dropdown.scss
@@ -29,7 +29,7 @@
             content: "";
             position:absolute;
             top: -0.4em;
-            @include left(2.2em);
+            left: 2.2em;
             width: 0em;
             height: 0em;
             border-left: 0.4em solid transparent;
