--- a/src/react-components/modals/_modal.scss
+++ b/src/react-components/modals/_modal.scss
@@ -37,7 +37,7 @@ $padding-value: 1rem;
   background: white;
   height: auto;
   top: 50%;
-  left: 50%;
+  inset-inline-start: 50%;
   transform: translate(-50%, -50%);
   width: 600px;
   margin: 30px auto;
