--- a/src/react-components/modals/_modal.scss
+++ b/src/react-components/modals/_modal.scss
@@ -38,9 +38,16 @@ $padding-value: 1rem;
   height: auto;
   top: 50%;
   inset-inline-start: 50%;
-  transform: translate(-50%, -50%);
   width: 600px;
   margin: 30px auto;
+
+  [dir='ltr'] & {
+    transform: translate(-50%, -50%);
+  }
+
+  [dir='rtl'] & {
+    transform: translate(50%, -50%);
+  }
 }
 
 .display-block {
