--- a/src/openlmis-tags-input/_openlmis-tags-input.scss
+++ b/src/openlmis-tags-input/_openlmis-tags-input.scss
@@ -71,6 +71,7 @@ tags-input {
     .tags {
         border: none;
         width: 100%;
+        display: flex;
 
         .input.invalid-tag {
             color: $black;
